--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </header>
     <main>
       <section class= "location">
-        <div class="city">Hyderabad, IN</div>
-        <div class="date">Thursday 23 July 2020</div>
+        <div class="city">Delhi, IN</div>
+        <div class="date">Sunday 26 July 2020</div>
       </section>
       <div class="current">
         <div class="temp">25<span>°c</span></div>
         <div class="weather">Rainy</div>
-        <div class="hi-low">20°c / 23°c</div>
+        <div class="hi-low">34°c / 36°c</div>
       </div>
     </main>
   </div>
